# routes/commentRoutes.js
@@ -6,7 +6,7 @@ const commentController = require('../controllers/commentController');
 router.post('/add', commentController.addComment);
 
 // Endpoint pour récupérer tous les commentaires d'un contenu
-router.get('/:contentId', commentController.getCommentsByContentId);
+router.get('/:PubId', commentController.getCommentsByContentId);
 
 router.delete('/delete', commentController.deleteCommentsByUserId);
 
